--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -56,7 +56,195 @@
         </div>
         </header>
         <main class="main">
-
+            <section class="hero">
+                <div class="container">
+                  <div class="hero-inner">
+                <div class="hero-content">
+                  <h1 class="hero-title">
+                    Alexa Rise
+                  </h1>
+                  <p class="hero-text">
+                    Save sincere emotions, romantic feelings and happy moments of life together with professional photographer Alexa Rise
+                  </p>
+                  <a class="hero-btn" href="#">
+                    Hire me
+                  </a>
+                </div>
+              </div>
+            </div>
+            </section>
+            <section class="skills">
+                <div class="container">
+                  <h2 class="skills-title title">
+                    Skills
+                  </h2>
+                  <div class="skills-items">
+                    <div class="skills-item">
+                      <img class="skills-img" src="images/skills/camera.svg" alt="camera logo">
+                      <p class="skills-item__title">
+                        Digital photography
+                      </p>
+                      <p class="skills-descr">
+                        High-quality photos in the studio and on the nature
+                      </p>
+                    </div>
+                    <div class="skills-item">
+                      <img class="skills-img" src="images/skills/video.svg" alt="video logo">
+                      <p class="skills-item__title">
+                        Video shooting
+                      </p>
+                      <p class="skills-descr">
+                        Capture your moments so that they always stay with you
+                      </p>
+                    </div>
+                    <div class="skills-item">
+                      <img class="skills-img" src="images/skills/image.svg" alt="img logo">
+                      <p class="skills-item__title">
+                        Retouch
+                      </p>
+                      <p class="skills-descr">
+                        I strive to make photography surpass reality
+                      </p>
+                    </div>
+                    <div class="skills-item">
+                      <img class="skills-img" src="images/skills/mic.svg" alt="mic logo">
+                      <p class="skills-item__title">
+                        Audio
+                      </p>
+                      <p class="skills-descr">
+                        Professional sounds recording for video, advertising, portfolio
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </section>
+              <section class="portfolio">
+                <div class="container">
+                  <h2 class="portfolio-title title">
+                    Portfolio
+                  </h2>
+                  <ul class="portfolio-filter__btn">
+                    <li class="portfolio-filter__item">
+                      <button class="portfolio-btn">
+                        Winter
+                      </button>
+                    </li>
+                    <li class="portfolio-filter__item">
+                      <button class="portfolio-btn">
+                        Spring
+                      </button>
+                    </li>
+                    <li class="portfolio-filter__item">
+                      <button class="portfolio-btn">
+                        Summer
+                      </button>
+                    </li>
+                    <li class="portfolio-filter__item">
+                      <button class="portfolio-btn">
+                        Autumn
+                      </button>
+                    </li>
+                  </ul>
+                  <ul class="portfolio-list">
+                    <li class="portfolio-item">
+                      <img class="portfolio-item__img" src="images/portfolio/1.jpg" alt="portfolio item">
+                    </li>
+                    <li class="portfolio-item">
+                      <img class="portfolio-item__img" src="images/portfolio/2.jpg" alt="portfolio item">
+                    </li>
+                    <li class="portfolio-item">
+                      <img class="portfolio-item__img" src="images/portfolio/3.jpg" alt="portfolio item">
+                    </li>
+                    <li class="portfolio-item">
+                      <img class="portfolio-item__img" src="images/portfolio/4.jpg" alt="portfolio item">
+                    </li>
+                    <li class="portfolio-item">
+                      <img class="portfolio-item__img" src="images/portfolio/5.jpg" alt="portfolio item">
+                    </li>
+                    <li class="portfolio-item">
+                      <img class="portfolio-item__img" src="images/portfolio/6.jpg" alt="portfolio item">
+                    </li>
+                  </ul>
+                </div>
+              </section>
+              <section class="video">
+                <div class="container">
+                  <h2 class="video-title title">
+                    Video
+                  </h2>
+                  <div class="video-popup">
+                    <div class="video-popup__inner">
+                    <a class="video-popup__link" href="#">
+                      <svg class="video-popup__img" width="130" height="130" viewBox="0 0 130 130" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M58.521 0.13572C58.0219 0.256183 55.5699 0.686409 53.0729 1.09112C6.17415 8.69809 -16.0083 65.9044 13.0263 104.367C22.0681 116.344 42.8323 129.906 43.8607 124.506C43.9895 123.832 42.7534 122.978 39.6854 121.624C27.0991 116.065 15.7097 105.112 9.49548 92.5938C-13.0744 47.1276 25.5402 -4.32319 75.965 4.02852C83.5399 5.28359 84.8555 2.66782 77.4319 1.11129C74.053 0.402757 60.344 -0.303999 58.521 0.136315V0.13572ZM58.8236 13.5427C49.9562 14.8494 38.5455 19.3896 38.5455 21.6114C38.5455 23.3352 39.8261 23.2017 44.5063 20.9901C70.1424 8.8779 101.354 22.1306 110.64 49.0716C126.075 93.8524 75.1194 131.76 36.427 104.279C14.9264 89.009 9.96843 58.679 25.4031 36.8396C29.4989 31.0443 27.3436 28.5941 23.1612 34.2915C-2.60779 69.3966 24.2964 118.982 67.7711 116.507C111.658 114.008 132.641 61.4206 102.441 29.6195C91.3694 17.9613 73.5089 11.378 58.8242 13.5415L58.8236 13.5427ZM111.588 21.4488C110.688 22.349 111.376 23.9601 114.257 27.704C135.62 55.4579 128.626 96.9429 99.2939 116.46C86.0768 125.255 74.472 127.692 52.7708 126.233C50.7271 126.096 50.3491 126.252 50.3491 127.237C50.3491 131.711 76.324 130.498 89.2029 125.422C126.968 110.539 141.858 62.4946 119.094 28.9739C114.774 22.6137 112.602 20.4352 111.588 21.4494L111.588 21.4488ZM47.2645 44.1107C46.191 45.2963 46.099 46.6867 45.9347 64.2031C45.6647 92.9997 42.7985 92.1292 77.569 73.8111C94.5145 64.8831 94.6095 65.1632 70.3056 52.4143C51.3039 42.4467 49.3949 41.7584 47.2645 44.1107ZM68.2637 55.0052C86.726 64.6481 86.8221 64.7081 85.5308 65.7798C84.0829 66.982 51.1615 84 50.285 84C49.5812 84 49.4412 80.8353 49.4412 64.9324C49.4412 51.5574 49.6388 45.8642 50.1022 45.8642C50.4654 45.8642 58.6385 49.9778 68.2643 55.0052H68.2637Z" fill="white"/>
+                        </svg>              
+                    </a>
+                  </div>
+                  </div>
+                </div>
+              </section>
+              <section class="price">
+                <div class="container">
+                  <h2 class="price-title title">
+                    Price
+                  </h2>
+                  <div class="price-items">
+                    <div class="price-list">
+                    <ul class="price-card">
+                      <li class="price-item__title">Standard</li>
+                      <li class="price-item__price">500 $</li>
+                      <li class="price-item__descr">One location</li>
+                      <li class="price-item__descr">120 photos in color</li>
+                      <li class="price-item__descr">12 photos in retouch</li>
+                      <li class="price-item__descr">Readiness 2-3 weeks</li>
+                      <li class="price-item__descr">Make up, visage</li>
+                      <li><button class="price-item__btn">Order shooting</button></li>
+                    </ul>
+                  </div>
+                  <div class="price-list">
+                    <ul class="price-card">
+                      <li class="price-item__title">Premium</li>
+                      <li class="price-item__price">700 $</li>
+                      <li class="price-item__descr">One or two locations</li>
+                      <li class="price-item__descr">200 photos in color</li>
+                      <li class="price-item__descr">20 photos in retouch</li>
+                      <li class="price-item__descr">Readiness 1-2 weeks</li>
+                      <li class="price-item__descr">Make up, visage</li>
+                      <li><button class="price-item__btn">Order shooting</button></li>
+                    </ul>
+                  </div>
+                  <div class="price-list">
+                    <ul class="price-card">
+                      <li class="price-item__title">Gold</li>
+                      <li class="price-item__price">1000 $</li>
+                      <li class="price-item__descr">Three locations or more</li>
+                      <li class="price-item__descr">300 photos in color</li>
+                      <li class="price-item__descr">50 photos in retouch</li>
+                      <li class="price-item__descr">Readiness 1 week</li>
+                      <li class="price-item__descr">Make up, visage, hairstyle</li>
+                      <li><button class="price-item__btn">Order shooting</button></li>
+                    </ul>
+                  </div>
+                  </div>
+                </div>
+              </section>
+              <section class="contacts">
+                <div class="container">
+                  <div class="contacts-inner">
+                    <form class="contacts-form" action="#">
+                      <h2 class="contacts-title">
+                        Contact me
+                      </h2>
+                        <div class="contacts-info__label">
+                            <input class="contacts-info__input" type="text" placeholder="NAME" required="">
+                            <input class="contacts-info__input" type="text" placeholder="EMAIL" required="">
+                        </div>
+                        <textarea class="contacts-info__textarea" placeholder="MESSAGE"></textarea>
+                        <button class="contacts-info__btn" type="submit">Send message</button>
+                    </form>
+                  </div>
+                </div>
+              </section>
         </main>
         <footer class="footer">
             <div class="container">
