feat: add index js

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -304,6 +304,7 @@
               </ul>     
             </div>
           </div> 
-          </footer>     
+          </footer>  
+          <script src="js/index.js"></script>   
 </body>
 </html>
