--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -64,7 +64,7 @@
         </header>
         <main class="main">
             <section id="hero" class="hero">
-                <div class="container">
+                <div class="container container-hero">
                   <div class="hero-inner">
                 <div class="hero-content">
                   <h1 class="hero-title">
@@ -243,10 +243,10 @@
                         Contact me
                       </h2>
                         <div class="contacts-info__label">
-                            <input class="contacts-info__input" type="tel" placeholder="NAME" required="">
-                            <input class="contacts-info__input" type="email" placeholder="EMAIL" required="">
+                            <input class="contacts-info__input" type="email" placeholder="Email" required="">
+                            <input class="contacts-info__input" type="tel" placeholder="Phone" required="">
                         </div>
-                        <textarea class="contacts-info__textarea" placeholder="MESSAGE"></textarea>
+                        <textarea class="contacts-info__textarea" placeholder="Message"></textarea>
                         <button class="contacts-info__btn" type="submit">Send message</button>
                     </form>
                   </div>
