--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -175,7 +175,7 @@
                 </div>
               </section>
               <section id="video" class="video">
-                <div class="container">
+                <div class="container container-hero">
                   <h2 class="video-title title">
                     Video
                   </h2>
@@ -236,7 +236,7 @@
                 </div>
               </section>
               <section id="contacts" class="contacts">
-                <div class="container">
+                <div class="container container-hero">
                   <div class="contacts-inner">
                     <form class="contacts-form" action="#">
                       <h2 class="contacts-title">
