fix: style css index js

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="body-lock">
     <header class="header">
         <div class="container">
           <div class="header-top">
@@ -125,7 +125,7 @@
                   </div>
                 </div>
               </section>
-              <section id="portfolio" class="portfolio">
+               <section id="portfolio" class="portfolio">
                 <div class="container">
                   <h2 class="portfolio-title title">
                     Portfolio
@@ -304,7 +304,7 @@
               </ul>     
             </div>
           </div> 
-          </footer>  
+          </footer>
           <script src="js/index.js"></script>   
 </body>
 </html>
