--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="body-lock">
     <header class="header">
         <div class="container">
           <div class="header-top">
@@ -64,7 +64,7 @@
         </header>
         <main class="main">
             <section id="hero" class="hero">
-                <div class="container">
+                <div class="container container-hero">
                   <div class="hero-inner">
                 <div class="hero-content">
                   <h1 class="hero-title">
@@ -125,7 +125,7 @@
                   </div>
                 </div>
               </section>
-              <section id="portfolio" class="portfolio">
+               <section id="portfolio" class="portfolio">
                 <div class="container">
                   <h2 class="portfolio-title title">
                     Portfolio
@@ -175,7 +175,7 @@
                 </div>
               </section>
               <section id="video" class="video">
-                <div class="container">
+                <div class="container container-hero">
                   <h2 class="video-title title">
                     Video
                   </h2>
@@ -236,17 +236,17 @@
                 </div>
               </section>
               <section id="contacts" class="contacts">
-                <div class="container">
+                <div class="container container-hero">
                   <div class="contacts-inner">
                     <form class="contacts-form" action="#">
                       <h2 class="contacts-title">
                         Contact me
                       </h2>
                         <div class="contacts-info__label">
-                            <input class="contacts-info__input" type="tel" placeholder="NAME" required="">
-                            <input class="contacts-info__input" type="email" placeholder="EMAIL" required="">
+                            <input class="contacts-info__input" type="email" placeholder="Email" required="">
+                            <input class="contacts-info__input" type="tel" placeholder="Phone" required="">
                         </div>
-                        <textarea class="contacts-info__textarea" placeholder="MESSAGE"></textarea>
+                        <textarea class="contacts-info__textarea" placeholder="Message"></textarea>
                         <button class="contacts-info__btn" type="submit">Send message</button>
                     </form>
                   </div>
@@ -304,6 +304,7 @@
               </ul>     
             </div>
           </div> 
-          </footer>     
+          </footer>
+          <script src="js/index.js"></script>   
 </body>
 </html>
