--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -78,7 +78,7 @@
                   <p class="hero-text" data-i18="hero-text">
                     Save sincere emotions, romantic feelings and happy moments of life together with professional photographer Alexa Rise
                   </p>
-                  <a class="hero-btn" href="#" data-i18="hire">
+                  <a class="hero-btn btn" href="#" data-i18="hire">
                     Hire me
                   </a>
                 </div>
@@ -87,43 +87,43 @@
             </section>
             <section id="skills" class="skills">
                 <div class="container">
-                  <h2 class="skills-title title">
+                  <h2 class="skills-title title" data-i18="skills">
                     Skills
                   </h2>
                   <div class="skills-items">
                     <div class="skills-item">
                       <img class="skills-img" src="images/skills/camera.svg" alt="camera logo">
-                      <p class="skills-item__title" data-i18="skills-title-1">
+                      <p class="skills-item__title" data-i18="skill-title-1">
                         Digital photography
                       </p>
-                      <p class="skills-descr" data-i18="skills-text-1">
+                      <p class="skills-descr" data-i18="skill-text-1">
                         High-quality photos in the studio and on the nature
                       </p>
                     </div>
                     <div class="skills-item">
                       <img class="skills-img" src="images/skills/video.svg" alt="video logo">
-                      <p class="skills-item__title" data-i18="skills-title-2">
+                      <p class="skills-item__title" data-i18="skill-title-2">
                         Video shooting
                       </p>
-                      <p class="skills-descr" data-i18="skills-text-2">
+                      <p class="skills-descr" data-i18="skill-text-2">
                         Capture your moments so that they always stay with you
                       </p>
                     </div>
                     <div class="skills-item">
                       <img class="skills-img" src="images/skills/image.svg" alt="img logo">
-                      <p class="skills-item__title" data-i18="skills-title-3">
+                      <p class="skills-item__title" data-i18="skill-title-3">
                         Retouch
                       </p>
-                      <p class="skills-descr" data-i18="skills-text-3">
+                      <p class="skills-descr" data-i18="skill-text-3">
                         I strive to make photography surpass reality
                       </p>
                     </div>
                     <div class="skills-item">
                       <img class="skills-img" src="images/skills/mic.svg" alt="mic logo">
-                      <p class="skills-item__title" data-i18="skills-title-4">
+                      <p class="skills-item__title" data-i18="skill-title-4">
                         Audio
                       </p>
-                      <p class="skills-descr" data-i18="skills-text-4">
+                      <p class="skills-descr" data-i18="skill-text-4">
                         Professional sounds recording for video, advertising, portfolio
                       </p>
                     </div>
@@ -132,27 +132,27 @@
               </section>
                <section id="portfolio" class="portfolio">
                 <div class="container">
-                  <h2 class="portfolio-title title">
+                  <h2 class="portfolio-title title" data-i18="portfolio">
                     Portfolio
                   </h2>
                   <ul class="portfolio-filter__btn">
                     <li class="portfolio-filter__item">
-                      <button class="portfolio-btn" data-i18="winter">
+                      <button class="portfolio-btn btn" data-i18="winter">
                         Winter
                       </button>
                     </li>
                     <li class="portfolio-filter__item">
-                      <button class="portfolio-btn" data-i18="spring">
+                      <button class="portfolio-btn btn" data-i18="spring">
                         Spring
                       </button>
                     </li>
                     <li class="portfolio-filter__item">
-                      <button class="portfolio-btn" data-i18="summer">
+                      <button class="portfolio-btn btn" data-i18="summer">
                         Summer
                       </button>
                     </li>
                     <li class="portfolio-filter__item">
-                      <button class="portfolio-btn" data-i18="autumn">
+                      <button class="portfolio-btn btn" data-i18="autumn">
                         Autumn
                       </button>
                     </li>
@@ -181,7 +181,7 @@
               </section>
               <section id="video" class="video">
                 <div class="container container-hero">
-                  <h2 class="video-title title">
+                  <h2 class="video-title title" data-i18="video">
                     Video
                   </h2>
                   <div class="video-popup">
@@ -197,7 +197,7 @@
               </section>
               <section id="price" class="price">
                 <div class="container">
-                  <h2 class="price-title title">
+                  <h2 class="price-title title" data-i18="price">
                     Price
                   </h2>
                   <div class="price-items">
@@ -210,7 +210,7 @@
                       <li class="price-item__descr" data-i18="price-description-1-span-3">12 photos in retouch</li>
                       <li class="price-item__descr" data-i18="price-description-1-span-4">Readiness 2-3 weeks</li>
                       <li class="price-item__descr" data-i18="price-description-1-span-5">Make up, visage</li>
-                      <li><button class="price-item__btn" data-i18="order">Order shooting</button></li>
+                      <li><button class="price-item__btn btn" data-i18="order">Order shooting</button></li>
                     </ul>
                   </div>
                   <div class="price-list">
@@ -222,7 +222,7 @@
                       <li class="price-item__descr" data-i18="price-description-2-span-3">20 photos in retouch</li>
                       <li class="price-item__descr" data-i18="price-description-2-span-4">Readiness 1-2 weeks</li>
                       <li class="price-item__descr" data-i18="price-description-2-span-5">Make up, visage</li>
-                      <li><button class="price-item__btn" data-i18="order">Order shooting</button></li>
+                      <li><button class="price-item__btn btn" data-i18="order">Order shooting</button></li>
                     </ul>
                   </div>
                   <div class="price-list">
@@ -234,7 +234,7 @@
                       <li class="price-item__descr" data-i18="price-description-3-span-1">50 photos in retouch</li>
                       <li class="price-item__descr" data-i18="price-description-3-span-1">Readiness 1 week</li>
                       <li class="price-item__descr" data-i18="price-description-3-span-1">Make up, visage, hairstyle</li>
-                      <li><button class="price-item__btn" data-i18="order">Order shooting</button></li>
+                      <li><button class="price-item__btn btn" data-i18="order">Order shooting</button></li>
                     </ul>
                   </div>
                   </div>
@@ -252,7 +252,7 @@
                             <input class="contacts-info__input" type="tel" placeholder="Phone" required="">
                         </div>
                         <textarea class="contacts-info__textarea" placeholder="Message"></textarea>
-                        <button class="contacts-info__btn" type="submit" data-i18="send-message">Send message</button>
+                        <button class="contacts-info__btn btn" type="submit" data-i18="send-message">Send message</button>
                     </form>
                   </div>
                 </div>
